syntax = "proto3";

package payment.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/mbakhodurov/homeworks/week1/shared/pkg/proto/payment/v1;payment_v1";

service PaymentService {
    rpc PayOrder(PayOrderRequest) returns (PayOrderResponse){
        option(google.api.http)={
            post: "/api/v1/payment/pay_order"
            body: "*"
        };
    }
}

enum PaymentMethod {
  UNKNOWN = 0;          // неизвестный способ
  CARD = 1;             // банковская карта
  SBP = 2;              // система быстрых платежей
  CREDIT_CARD = 3;      // кредитная карта
  INVESTOR_MONEY = 4;   // деньги инвестора (внутренний метод)
}

message PayOrderRequest {
    string order_uuid = 1 [(validate.rules).string = {uuid: true}];              // UUID заказа
    string user_uuid = 2 [(validate.rules).string = {min_len: 10, max_len: 50}];               // UUID пользователя, который инициирует оплату
    PaymentMethod payment_method = 3;   // выбранный способ оплаты
}

message PayOrderResponse {
  string transaction_uuid = 1;        // UUID транзакции оплаты
}