syntax = "proto3";

package payment.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/mbakhodurov/homeworks/week3/shared/pkg/proto/payment/v1;payment_v1";

service PaymentService {
    rpc PayOrder(PayOrderRequest) returns (PayOrderResponse){
        option(google.api.http)={
            post: "/api/v1/payment/pay_order"
            body: "*"
        };
    }
}

enum PaymentMethod {
  PAYMENT_METHOD_UNKNOWN_UNSPECIFIED = 0;          // неизвестный способ
  PAYMENT_METHOD_CARD = 1;             // банковская карта
  PAYMENT_METHOD_SBP = 2;              // система быстрых платежей
  PAYMENT_METHOD_CREDIT_CARD = 3;      // кредитная карта
  PAYMENT_METHOD_INVESTOR_MONEY = 4;   // деньги инвестора (внутренний метод)
}

message PayOrderRequest {
    string order_uuid = 1 [(validate.rules).string = {uuid: true}];              // UUID заказа
    string user_uuid = 2 [(validate.rules).string = {min_len: 10, max_len: 50}];               // UUID пользователя, который инициирует оплату
    PaymentMethod payment_method = 3;   // выбранный способ оплаты
}

message PayOrderResponse {
  string transaction_uuid = 1;        // UUID транзакции оплаты
}